PharmaDemo/src/objects/SKU__c.object
<CustomObject>
    <description>Stock Keeping Units</description>
    <fields>
        <fullName>Current_Stock__c</fullName>
        <label>Current Stock</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <label>Product</label>
        <referenceTo>Stock_Product__c</referenceTo>
        <relationshipLabel>SKU#</relationshipLabel>
        <relationshipName>SKU_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item_Quantity__c</fullName>
        <description>This is a dummy field used on SKU for inputting the quantity of SKU&apos;s for a particular order Line Item. This is included to allow for easier code update and to avoid having to use a nested class to pass records to the visual force page.</description>
        <label>Order Line Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_Size__c</fullName>
        <label>Pack Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SKU</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Custom_Product__c</columns>
        <columns>Description__c</columns>
        <columns>Current_Stock__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SKU Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKU&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>